Add Val + Test Loop

--- a/diffuser.ipynb
+++ b/diffuser.ipynb
@@ -12,6 +12,13 @@
       "/home/korte/micromamba/envs/ml/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-09-01 18:01:52,834] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+     ]
     }
    ],
    "source": [
@@ -21,20 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "vae/diffusion_pytorch_model.safetensors not found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "repo_id = \"stabilityai/stable-diffusion-2-base\"\n",
-    "pipe = DiffusionPipeline.from_pretrained(repo_id, torch_dtype=torch.float16, revision=\"fp16\")\n",
+    "pipe = DiffusionPipeline.from_pretrained(repo_id)\n",
     "\n",
     "pipe.scheduler = DPMSolverMultistepScheduler.from_config(pipe.scheduler.config)"
    ]
@@ -77,6 +76,51 @@
     "image = pipe(prompt, num_inference_steps=25).images[0]\n",
     "image.save(\"astronaut.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_embeds = pipe._encode_prompt(\n",
+    "            \"Test\",\n",
+    "            pipe._execution_device,\n",
+    "            1,\n",
+    "            True,\n",
+    "            \"\",\n",
+    "            prompt_embeds=None,\n",
+    "            negative_prompt_embeds=None,\n",
+    "            lora_scale=None,\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 77, 1024])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt_embeds.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
