--- a/diffuser.ipynb
+++ b/diffuser.ipynb
@@ -2,27 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/korte/micromamba/envs/ml/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2023-09-06 11:25:47,225] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler\n",
+    "from diffusers import DiffusionPipeline, DPMSolverMultistepScheduler, PNDMScheduler\n",
     "import torch\n",
     "from es_dataset import EpidemicSoundDataset\n",
     "import torch.nn.functional as F\n",
@@ -33,46 +17,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "repo_id = \"stabilityai/stable-diffusion-2-base\"\n",
-    "pipe = DiffusionPipeline.from_pretrained(repo_id)\n",
-    "\n",
-    "pipe.scheduler = DPMSolverMultistepScheduler.from_config(pipe.scheduler.config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipe.unet = pipe.unet.float()\n",
-    "pipe.vae = pipe.vae.float()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/local_scratch/pbs.1130745.pbs02/ipykernel_2117363/3001686650.py:1: FutureWarning: Accessing config attribute `cross_attention_dim` directly via 'UNet2DConditionModel' object attribute is deprecated. Please access 'cross_attention_dim' over 'UNet2DConditionModel's config object instead, e.g. 'unet.config.cross_attention_dim'.\n",
+      "`text_config_dict` is provided which will be used to initialize `CLIPTextConfig`. The value `text_config[\"id2label\"]` will be overriden.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# repo_id = \"stabilityai/stable-diffusion-2-base\"\n",
+    "repo_id = \"CompVis/stable-diffusion-v1-4\"\n",
+    "pipe = DiffusionPipeline.from_pretrained(repo_id)\n",
+    "\n",
+    "# pipe.scheduler = DPMSolverMultistepScheduler.from_config(pipe.scheduler.config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.vae.save_pretrained('/scratch/korte/audiffuse/sd14_ae_ckpt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([999, 998, 998,  ...,   2,   1,   0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "pndm = PNDMScheduler(num_train_timesteps=1000)\n",
+    "pndm.set_timesteps(1000)\n",
+    "print(pndm.timesteps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.scheduler.timesteps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/local_scratch/pbs.1165141.pbs02/ipykernel_64709/3001686650.py:1: FutureWarning: Accessing config attribute `cross_attention_dim` directly via 'UNet2DConditionModel' object attribute is deprecated. Please access 'cross_attention_dim' over 'UNet2DConditionModel's config object instead, e.g. 'unet.config.cross_attention_dim'.\n",
       "  pipe.unet.cross_attention_dim\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1024"
+       "768"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
