--- a/wav2vec2.ipynb
+++ b/wav2vec2.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/zfs/ailab/Tools/micromamba/envs/ml/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/korte/micromamba/envs/ml/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -43,11 +43,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at m-a-p/MERT-v1-95M were not used when initializing MERTModel: ['encoder.pos_conv_embed.conv.weight_g', 'encoder.pos_conv_embed.conv.weight_v']\n",
+      "Some weights of the model checkpoint at m-a-p/MERT-v1-95M were not used when initializing MERTModel: ['encoder.pos_conv_embed.conv.weight_v', 'encoder.pos_conv_embed.conv.weight_g']\n",
       "- This IS expected if you are initializing MERTModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing MERTModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of MERTModel were not initialized from the model checkpoint at m-a-p/MERT-v1-95M and are newly initialized: ['encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'encoder.pos_conv_embed.conv.parametrizations.weight.original1']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "Some weights of MERTModel were not initialized from the model checkpoint at m-a-p/MERT-v1-95M and are newly initialized: ['encoder.pos_conv_embed.conv.parametrizations.weight.original0', 'encoder.pos_conv_embed.conv.parametrizations.weight.original1']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +116,7 @@
        "(3021845,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +149,7 @@
        "dict_keys(['input_values', 'attention_mask'])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([13, 9022, 768])\n",
-      "torch.Size([13, 768])\n"
+      "torch.Size([13, 2, 9443, 768])\n",
+      "torch.Size([13, 2, 768])\n"
      ]
     }
    ],
@@ -184,6 +182,36 @@
     "time_reduced_hidden_states = all_layer_hidden_states.mean(-2)\n",
     "print(time_reduced_hidden_states.shape) # [13, 768]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "permute(sparse_coo): number of dimensions in the tensor input does not match the length of the desired ordering of dimensions i.e. input.dim() = 4 is not equal to len(dims) = 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/home/korte/projects/audifuse/wav2vec2.ipynb Cell 8\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bpalmetto/home/korte/projects/audifuse/wav2vec2.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m audio_embeds \u001b[39m=\u001b[39m all_layer_hidden_states\u001b[39m.\u001b[39mpermute(\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://tunnel%2Bpalmetto/home/korte/projects/audifuse/wav2vec2.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m audio_embeds_avg_pool \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mavg_pool1d(audio_embeds\u001b[39m.\u001b[39;49mpermute(\u001b[39m0\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m1\u001b[39;49m), kernel_size\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m, padding\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mpermute(\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bpalmetto/home/korte/projects/audifuse/wav2vec2.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m audio_embeds_max_pool \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mmax_pool1d(audio_embeds\u001b[39m.\u001b[39mpermute(\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m), kernel_size\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m, padding\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mpermute(\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: permute(sparse_coo): number of dimensions in the tensor input does not match the length of the desired ordering of dimensions i.e. input.dim() = 4 is not equal to len(dims) = 3"
+     ]
+    }
+   ],
+   "source": [
+    "audio_embeds = all_layer_hidden_states.permute(1, 0, 2, 3)\n",
+    "audio_embeds_avg_pool = F.avg_pool1d(audio_embeds.permute(0, 2, 1), kernel_size=4, padding=1).permute(0, 2, 1)\n",
+    "audio_embeds_max_pool = F.max_pool1d(audio_embeds.permute(0, 2, 1), kernel_size=4, padding=1).permute(0, 2, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -201,65 +229,6 @@
    "outputs": [],
    "source": [
     "non_trunc = time_reduced_hidden_states.cpu().numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-0.1839,  0.0560,  0.3645,  ..., -0.1801, -0.2498,  0.0766],\n",
-       "        [-0.1308, -0.1409,  0.5574,  ..., -0.2917, -0.0786,  0.0187],\n",
-       "        [ 0.0600, -0.0027,  0.3828,  ..., -0.0912, -0.0442, -0.0882],\n",
-       "        ...,\n",
-       "        [-0.0450, -0.1034,  0.0135,  ..., -0.1094, -0.0755, -0.0220],\n",
-       "        [ 0.0359, -0.0826, -0.0972,  ..., -0.1007, -0.0177,  0.0244],\n",
-       "        [-0.0394, -0.0164, -0.0542,  ...,  0.1010, -0.1002,  0.0485]],\n",
-       "       device='cuda:0')"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trunc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.18856402,  0.05180721,  0.4061588 , ..., -0.1926618 ,\n",
-       "        -0.25924715,  0.07684468],\n",
-       "       [-0.13712476, -0.13524362,  0.60284626, ..., -0.30100065,\n",
-       "        -0.07869767,  0.0167464 ],\n",
-       "       [ 0.05161031,  0.00725114,  0.42961738, ..., -0.09042618,\n",
-       "        -0.03980322, -0.09716687],\n",
-       "       ...,\n",
-       "       [-0.0262141 , -0.09254253,  0.02330886, ..., -0.12008666,\n",
-       "        -0.06740732, -0.01618211],\n",
-       "       [ 0.0374712 , -0.0803475 , -0.08498251, ..., -0.1117202 ,\n",
-       "        -0.01279834,  0.03500533],\n",
-       "       [-0.04584039, -0.01758612, -0.03769425, ...,  0.09866826,\n",
-       "        -0.10444974,  0.05512224]], dtype=float32)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "non_trunc"
    ]
   },
   {
